fixed hero gap

--- a/src/index.css
+++ b/src/index.css
@@ -50,3 +50,13 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+@media (min-width: 1440px) {
+  main {
+    gap: 80px;
+  }
+}
+@media (min-width: 744px) and (max-width: 1440px) {
+  main {
+    gap: 80px;
+  }
+}
